--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="nav"><ul>
             <li><a href="#">home</a></li>
             <li><a href="#">login</a></li>
-            <li><a href="#">register</a></li>
+            <li><a href="#">register</a></li><a href="">ya</a>
             
 
         </ul></div>
